--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.asciidoctor.convert' version '1.5.3'
 	id 'org.springframework.boot' version '2.1.4.RELEASE'
 	id 'java'
+	id 'application'
 }
 
 apply plugin: 'io.spring.dependency-management'
@@ -19,10 +20,19 @@ ext {
 }
 
 dependencies {
+//	compile 'com.google.api-client:google-api-client:1.28.0'
+	compile 'com.google.api-client:google-api-client:1.23.0'
+//	compile 'com.google.oauth-client:google-oauth-client-jetty:1.28.0'
+	compile 'com.google.apis:google-api-services-sheets:v4-rev516-1.23.0'
+	compile("com.google.oauth-client:google-oauth-client-jetty:1.23.0") {
+		exclude group: 'org.mortbay.jetty', module: 'servlet-api'
+	}
+//	compile group: 'com.google.apis', name: 'google-api-services-sheets', version: 'v4-rev563-1.25.0'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+
 }
 
 test {
